--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "react-typescript-template",
+  "name": "odin-weather-app",
   "private": true,
   "version": "0.0.0",
   "type": "module",
